--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "start": "vite build && node server.cjs",
-    "preview": "vite preview",
-    "lint": "eslint src/"
+    "start": "tsc && vite build && node server.cjs",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
