--- a/package.json
+++ b/package.json
@@ -10,16 +10,26 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "start": "vite build && node server.cjs",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src/"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@types/node": "^22.5.4",
     "@types/postcss-preset-env": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "globals": "^15.9.0",
+    "install": "^0.13.0",
+    "npm": "^10.8.3",
     "postcss": "^8.4.45",
     "postcss-preset-env": "^10.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.6.0",
     "vite": "^5.4.1"
   },
   "dependencies": {
