--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.10.0",
+    "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "globals": "^15.9.0",
     "install": "^0.13.0",
     "npm": "^10.8.3",
     "postcss": "^8.4.45",
     "postcss-preset-env": "^10.0.3",
+    "stylelint": "^16.9.0",
+    "stylelint-config-standard-scss": "^13.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.6.0",
