--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "start": "vite build && node server.cjs",
+    "test": "mocha",
     "preview": "vite preview",
     "lint": "eslint src/"
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
+    "@types/chai": "^5.0.1",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.5.4",
     "@types/postcss-preset-env": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
     "autoprefixer": "^10.4.20",
+    "chai": "^5.1.2",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "globals": "^15.9.0",
     "install": "^0.13.0",
+    "mocha": "^11.0.1",
     "npm": "^10.8.3",
     "postcss": "^8.4.45",
     "postcss-preset-env": "^10.0.3",
@@ -36,6 +41,7 @@
   },
   "dependencies": {
     "express": "^4.20.0",
-    "handlebars": "^4.7.8"
+    "handlebars": "^4.7.8",
+    "jsdom": "^25.0.1"
   }
 }
