--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,9 @@
     "sourceMap": true,
     "strictNullChecks": true
   },
+  "ts-node": {
+    "experimentalSpecifierResolution": "node",
+    "transpileOnly": true
+  },
   "include": ["src"]
 }
