--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "start": "vite build && node server.cjs",
     "test": "mocha",
     "preview": "vite preview",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "prepare": "husky"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm-run-all test lint",
+      "pre-push": "npm run-all test lint"
+    }
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
@@ -27,9 +34,11 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "globals": "^15.9.0",
+    "husky": "^9.1.7",
     "install": "^0.13.0",
     "mocha": "^11.0.1",
     "npm": "^10.8.3",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.45",
     "postcss-preset-env": "^10.0.3",
     "stylelint": "^16.9.0",
