--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
       "pre-push": "npm run-all test lint"
     }
   },
+  "pre-commit": [
+    "test",
+    "lint"
+  ],
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@types/chai": "^5.0.1",
@@ -41,6 +45,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.45",
     "postcss-preset-env": "^10.0.3",
+    "pre-commit": "^1.2.2",
     "stylelint": "^16.9.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "ts-node": "^10.9.2",
