--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "globals": "^15.9.0",
-    "husky": "^9.1.7",
+    "husky": "8.0.0",
     "install": "^0.13.0",
     "mocha": "^11.0.1",
     "npm": "^10.8.3",
