--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.5.4",
     "@types/postcss-preset-env": "^8.0.0",
+    "@types/sinon": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
     "autoprefixer": "^10.4.20",
@@ -41,6 +42,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.45",
     "postcss-preset-env": "^10.0.3",
+    "sinon": "^19.0.2",
     "stylelint": "^16.9.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "ts-node": "^10.9.2",
