--- a/package.json
+++ b/package.json
@@ -13,13 +13,8 @@
     "test": "mocha",
     "preview": "vite preview",
     "lint": "eslint src/",
-    "prepare": "husky"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm-run-all test lint",
-      "pre-push": "npm run-all test lint"
-    }
+    "prepare": "husky install",
+    "pre-commit": "npm-run-all test lint"
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
