--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "vite build && node server.cjs",
     "test": "mocha",
     "preview": "vite preview",
-    "lint": "eslint src/",
+    "lint": "eslint src/ && stylelint \"**/*.pcss\"",
     "prepare": "husky install",
     "pre-commit": "npm-run-all test lint"
   },
